--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <title>Trivia Game!!!!!!!!!!</title>
 </head>
 
-<body>
+<body background="assets/images/taxi.jpg">
     <div class="container">
 
     <div class="card card-header" id="newyork">
-      <h1 class="nyc">Trivia Game!!!!!!</h1>
+      <div class="col-md-12">
+      <img  src="assets/images/logo.png" height="200px" width="300px"><h1 class="nyc">Trivia Game!!!!!!</h1>
+    </div>
     </div>
           
   <div class="card">
@@ -27,9 +29,9 @@
       Press Start to Begin!
     </div>
     <div class="card-body">
-      <button type="submit" class="btn btn-primary" id="startButton">Start</button>
+      <button type="button" class="btn btn-primary" id="startButton">Start</button>
       <div class="text-center" id="time">
-        Time Remaining: 10     
+        Time Remaining: 20     
       </div>
       <br>
       <div class="text-center" id="questions"></div>
@@ -37,12 +39,15 @@
       <div class="row">
         <div class="col-md-4"></div>
       <div class="col-md-4" id="choices">
-    <div class="answers"> 
+   <!--  <div class="text-center" id="answers"> --> 
       <div class="text-center" id="answer1"></div>
       <div class="text-center" id="answer2"></div> 
       <div class="text-center" id="answer3"></div> 
       <div class="text-center" id="answer4"></div> 
     </div>
+  </div>
+  <div class="text-center" id="">
+    
   </div>
   </div>
       <br>     
@@ -59,7 +64,7 @@
 </script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="assets/javascript/trivia.js" type="text/javascript"></script>
+    <script src="assets/javascript/trivia1.js" type="text/javascript"></script>
     <!-- <script src="assets/javascript/script2.js" type="text/javascript"></script> -->
 
 
